--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@ ol {
 	margin-right: 25px;
 }
 
-.header__top__links a {
+.header__top__links a{
 	color: #ffffff;
 	font-size: 13px;
 	text-transform: uppercase;
@@ -1064,7 +1064,7 @@ ol {
 	transition: all, 0.3s;
 }
 
-.product__item__text h6 {
+.product__item__text h6 , .order-item-detali{
 	color: #111111;
 	font-size: 15px;
 	font-weight: 600;
@@ -1084,7 +1084,7 @@ ol {
 	margin-right: -5px;
 }
 
-.product__item__text h5 {
+.product__item__text h5{
 	color: #0d0d0d;
 	font-weight: 700;
 }
@@ -3908,14 +3908,15 @@ ol {
 }
 .fm-success-msg-box{
 	position: relative;
-	width: 250px;
-	height: 300px;
+	width: 300px;
+	height: 350px;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
 	border-radius: 10px;
-	background-color: #e1e1e1;
+	background-color: #eeeeee;
 	box-shadow: 0 0 10px #333;
+	padding: 20px 10px;
 }
 .success-msg-box-item{
 	padding: 8px;
@@ -3923,6 +3924,10 @@ ol {
 .success-msg-box-item-text{
 	padding-left: 2px;
 	padding-right: 2px;
+}
+.txt-make-order-result{
+	font-weight: 700;
+	font-size: 16px;
 }
 .success-msg-box-item, .success-msg-box-item-text{
 	display: flex;
@@ -3956,4 +3961,60 @@ ol {
 .browse-order-item-list{
 	display: flex;
 	flex-wrap: wrap;
+}
+.order-item:hover{
+	cursor: pointer;
+}
+.accept-order-btn{
+	background: #fd5f00;
+	border: 0px;
+	border-radius: 10px;
+	padding: 5px 50px;
+	color: #000;
+	font-size: 16px;
+	font-weight: 700;
+	font-family: "Nunito Sans", sans-serif;
+}
+.accept-order-btn:hover{
+	background: #ec4900;
+	transition: 0.3s ease;
+}
+.user-account-dropdown{
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+}
+.user-email:hover .user-account-dropdown {
+	display: flex;
+	flex-direction: column;
+}
+.account-status{
+	color: #ffffff;
+	font-size: 13px;
+	letter-spacing: 2px;
+	margin-right: 28px;
+	display: inline-block;
+	text-decoration: underline;
+
+}
+.user-account-dropdown-item{
+	padding: 10px;
+	text-align: center;
+	background-color: #000;
+	margin-right: 0px !important;
+}
+.user-account-dropdown-item:hover{
+	background-color: #333;
+}
+.account-status:hover{
+	cursor: pointer;
+}
+#success-msg-box-return-btn{
+	text-decoration: underline;
+}
+#success-msg-box-return-btn:hover{
+	color: #1da1f2 !important;
 }
