--- a/css/create_order_form.css
+++ b/css/create_order_form.css
@@ -117,6 +117,7 @@ h3.global-title {
     font-size: 40px;
     line-height: 45px;
   }
+  
 }
 
 @media screen and (max-width:600px) {
@@ -145,9 +146,9 @@ h3.global-title {
   font-weight: bold;
 }
 
-form.signin-form {
+form.create-order-form {
   margin: 0 auto;
-  max-width: 420px;
+  max-width: 820px;
 }
 
 .form-input {
@@ -269,4 +270,43 @@ button.btn:hover, .next-page-btn{
 }
 #order-detali, #order-about, #order-user-information{
   display: none;
+}
+
+.schedule-bar{
+  width: 50vw;
+  height: 16px;
+  border: 2px black solid;
+  border-radius: 10px;
+  display: flex;
+  padding: 2px;
+}
+.schedule-bar-finish{
+  flex-grow: 1;
+  background-color: #00ec76;
+  border-radius: 10px;
+  margin: 0px 3px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+}
+.schedule-bar-finish:hover{
+  opacity: 0.6;
+  cursor: pointer;
+}
+.order-form-schedule{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+.schedule-bar-txt{
+  font-weight: 900;
+}
+#schedule-second, #schedule-third{
+  visibility: hidden;
+}
+.current-schedule{
+  background-color: #efff95 !important;
 }
