--- a/css/create_order_form.css
+++ b/css/create_order_form.css
@@ -87,6 +87,7 @@ p {
 /* Section top bottom gap */
 .section-gap {
   padding:  30px;
+  min-width: 50vw;
 }
 
 @media screen and (max-width:767px) {
@@ -117,6 +118,7 @@ h3.global-title {
     font-size: 40px;
     line-height: 45px;
   }
+  
 }
 
 @media screen and (max-width:600px) {
@@ -145,9 +147,9 @@ h3.global-title {
   font-weight: bold;
 }
 
-form.signin-form {
+form.create-order-form {
   margin: 0 auto;
-  max-width: 420px;
+  max-width: 820px;
 }
 
 .form-input {
@@ -170,11 +172,9 @@ form.signin-form {
   font-size: 16px;
   line-height: 25px;
   padding: 10px 20px 10px 20px;
-  margin-bottom: 15px;
   color: #333;
   font-family: inherit;
   text-align: left;
-  -webkit-appearance: none;
   background: rgba(255, 154, 66, 0.02);
   display: grid;
   grid-template-columns: .1fr 1fr;
@@ -186,7 +186,7 @@ form.signin-form {
 .form-inner-cont textarea {
   height: 125px;
   resize: none;
-  padding: 12px 15px;
+  padding: 12px 10px;
   background: rgba(255, 154, 66, 0.02);
   display: grid;
   grid-template-columns: .1fr 1fr;
@@ -267,6 +267,107 @@ button.btn:hover, .next-page-btn{
 #order-information{
   display: block;
 }
-#order-detali, #order-about, #order-user-information{
+#order-detail, #order-about, #order-user-information, #order-record{
   display: none;
+}
+.oc-product-select{
+  margin-bottom: 3px !important;
+}
+.product-select-box{
+  position: relative;
+}
+.product-select-box-option{
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  z-index: 10;
+  background-color: #fff;
+  box-shadow: 0 0 3px black;
+  border-radius: 4px;
+  width: 100%;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-weight: 600;
+}
+.product-select-box-item{
+  padding: 8px;
+  padding-left: 20px;
+  border-radius: 4px;
+}
+.product-select-box-item:hover{
+  background-color: #eee;
+}
+.product-select-box:hover, .oc-product-select:hover{
+  cursor: pointer;
+}
+.form-progress-bar{
+  width: 50vw;
+  height: 16px;
+  border: 2px black solid;
+  border-radius: 10px;
+  display: flex;
+  padding: 2px;
+}
+.progress-bar-finish{
+  flex-grow: 1;
+  background-color: #00ec76;
+  border-radius: 10px;
+  margin: 0px 3px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+}
+.progress-bar-finish:hover{
+  opacity: 0.6;
+  cursor: pointer;
+}
+.order-form-progress{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+.progress-bar-txt{
+  font-weight: 900;
+}
+#progress-second, #progress-third{
+  visibility: hidden;
+}
+.current-progress{
+  background-color: #e5f369 !important;
+}
+.generate-order-record{
+  flex-grow: 1;
+  margin-left: 2px;
+  margin-right: 2px;
+  font-size: 18px;
+  font-weight: 600;
+  word-break:break-all;
+}
+.none{
+  display: none !important;
+}
+.m-top-5{
+  margin-top: 5px;
+}
+.hint{
+  font-size: 15px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 900;
+  color: #038f0e;
+}
+
+.order-form-error-message{
+  font-size: 16px;
+  font-weight: 900;
+  color: #ff0000;
+}
+.load-form{
+  width: 100%;
+  height: 90%;
+  background-color: #fff;
+  position: absolute;
+  z-index: 99;
 }
